[package]
name = "bundler"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
arrayref = "0.3"
bytes = "0.4.5"
clap = "2.32"
crossbeam = "0.5"
failure = "0.1"
fnv = "1"
minion = "0.1.0"
pcap = { git = "https://github.com/ryan-robeson/pcap", branch = "set-immediate-mode" }
libccp = "0.0.13"
#portus = "^0.4"
portus = { git = "https://github.com/ccp-project/portus", branch = "bundler" }
slog = "2"
slog-term = "2"
slog-async = "2"
structopt = "0.2"
time = "0.1"
regex = "1.1.0"

[build-dependencies]
bindgen = "0.43.0"
